projects/vb6parse/snapshots/parsers/cst/library/string/replace/replace_with_all_parameters.snap
---
source: projects/vb6parse/tests/library/string/replace.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: DimStatement
      children:
        - kind: DimKeyword
          text: Dim
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: result
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: StringKeyword
          text: String
        - kind: Newline
          text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: result
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: Replace
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: StringLiteralExpression
                      children:
                        - kind: StringLiteral
                          text: "\"one, two, three\""
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: StringLiteralExpression
                      children:
                        - kind: StringLiteral
                          text: "\", \""
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: StringLiteralExpression
                      children:
                        - kind: StringLiteral
                          text: "\" | \""
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: NumericLiteralExpression
                      children:
                        - kind: IntegerLiteral
                          text: "1"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: NumericLiteralExpression
                      children:
                        - kind: IntegerLiteral
                          text: "2"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: vbBinaryCompare
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
